# industrial-data-store-simulation-chatbot

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  models.json  postgres_creds.json  prompt_instructions.json  pyproject.toml  requirements.txt  sample_questions.json  text-to-sql-notebook.ipynb
MES-synthetic-data/: CreateTables.sql  create_tables.py  data_pools.json  example-queries.sql  install_postgres.sh  mes-simulation.md  mesdata-sim.py  sqlite-synthetic-mes-data.py
app_factory/: README.md  __init__.py  app.py  main.py
app_factory/data/: meeting_templates.json  sample_questions.json
app_factory/data_generator/: __init__.py  data_pools.json  refresh-mes-data.py  sqlite-synthetic-mes-data.py
app_factory/mes_agents/: CONFIGURATION.md  README.md  __init__.py  agent_manager.py  config.py  error_handling.py  mes_analysis_agent.py
app_factory/mes_agents/tools/: __init__.py  database_tools.py  datetime_tools.py  visualization_tools.py
app_factory/mes_chat/: __init__.py  agent_chat.py  app.py  chat_interface.py
app_factory/production_meeting/: __init__.py  action_tracker.py  ai_insights.py  analysis_cache_manager.py  app.py  daily_analysis_scheduler.py  dashboard.py  dashboards.py  report.py
app_factory/production_meeting/dashboards/: __init__.py  color_config.py  equipment.py  inventory.py  production.py  productivity.py  quality.py  root_cause.py  weekly.py
app_factory/production_meeting/utils/: interactive_explanations.py
app_factory/production_meeting_agents/: CONFIGURATION.md  README.md  __init__.py  agent_manager.py  config.py  error_handling.py  production_meeting_agent.py
app_factory/production_meeting_agents/tools/: __init__.py  database_tools.py  visualization_tools.py
app_factory/shared/: __init__.py  bedrock_utils.py  database.py  db_utils.py  production_utils.py
chatbot/: Chat.py  chatbot_lib.py  mes_tools.py  mes_utils.py
scripts/: DAILY_ANALYSIS_SETUP.md  run_daily_analysis.py  setup_daily_analysis.py
tests/: run_integration_tests.py  test_integration_agent_tools.py  test_integration_dashboard.py
