[project]
name = "manufacturing-operations-hub"
version = "1.0.0"
description = "A comprehensive platform providing manufacturing operations interfaces powered by Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Manufacturing Operations Hub Team"}
]
license = {file = "LICENSE"}
keywords = ["manufacturing", "operations", "mes", "streamlit", "bedrock", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.42.0",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.37.0",
    "strands-agents>=1.0",
    "Faker>=22.0.0",
    "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/manufacturing-operations-hub"
Repository = "https://github.com/your-org/manufacturing-operations-hub.git"
Issues = "https://github.com/your-org/manufacturing-operations-hub/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true